--- a/style.css
+++ b/style.css
@@ -5,11 +5,22 @@ body {
   margin: 2em;
   width: 100%;
   height: 100%;
+
+  background: linear-gradient(to bottom, #ccff99 0%, #ff99cc 100%);
+}
+
+p {
+
+  font-family: 'Electrolize', sans-serif;
 }
 
 h1 {
-  color: #373fff;
+  font-family: 'Press Start 2P', cursive;
+  color: #FF00FF;
   font-size: 18pt;
+
+  
+}
 }
 .special-h2{
   margin-top:0;
