--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2 {
 
 button {
   font-family: "Inconsolata", monospace;
-  background-color: black;
+  background-color: white;
   border: none;
   color: white;
   padding: 10px 10px;
